# partitioned_future

./: CMakeLists.txt  README.md
include/partitioned_future/: algorithm.h  partitioned_future.h  std_execution.h
tests/: CMakeLists.txt
tests/src/: test_partitioned_future.cpp
